# LicenseInfo

./: AES.cpp  AES.h  CMakeLists.txt  LicenseInfo.cpp  LicenseInfo.h  generateLicenseFile.cpp  main.cpp  parseLicense.cpp
